--- a/src/sass/modules/_podcast.scss
+++ b/src/sass/modules/_podcast.scss
@@ -32,7 +32,7 @@ section.adx-podcast-square{
   audio {
     grid-column: span 2;
     height: $xxl;
-    z-index: -1;
+    z-index: 999;
     width: 100%;
     }
 }
